Clean some stuff up